fixes for remote